--- a/public/stylesheets/sass/layout/_services.scss
+++ b/public/stylesheets/sass/layout/_services.scss
@@ -1,6 +1,7 @@
 .services {
-	grid-column: center-start / center-end;
-	margin: 0 0 15rem 0;
+	grid-column: full-start / full-end;
+	padding: 15rem;
+	background-color: $color-grey-light-1;
 
 	display: grid;
 	grid-template-columns: repeat(3, minmax(25rem, max-content));
