--- a/views/index.ejs
+++ b/views/index.ejs
@@ -33,9 +33,9 @@
 
 		<section class="about" id="about">
 			<img src="/resources/img/about.png" alt="about_photo" />
-			<h2 class="heading-2">About Me</h2>
+			<h2 class="heading-2 about__title">About Me</h2>
 			<p class="about__paragraph">
-				My name is Rituraj Dutta and I am a Web Developer. I began my journey in web development from the online courses. I learned the fundamentals of C, C++, Java in college but i didn't knew what i can create. When i was in 3rd year i somehow came to know that online courses teaches you how we can create applications. From then my web development journey began. Now i have created few applications of my own.
+				My name is Rituraj Dutta and I am a Web Developer.<br>I began my journey in web development from the online courses.<br>I learned the fundamentals of C, C++, Java in college but i didn't knew what i can create.<br>When i was in 3rd year i somehow came to know that online courses teaches you how we can create applications. From then my web development journey began.<br>Now i have created few applications of my own.
 			</p>
 		</section>
 
@@ -106,12 +106,8 @@
 				<div class="project__overlay">
 					<div class="project__overlay--container">
 						<figure class="project__overlay--figure">
-							<img class="project__overlay--image pro-1" src="/resources/img/project-1.jpg" alt="project-1" />
-							<img class="project__overlay--image pro-1" src="/resources/img/project-2.jpg" alt="project-2" />
-							<img class="project__overlay--image pro-1" src="/resources/img/project-3.jpg" alt="project-3" />
+							<img class="project__overlay--image" src="/resources/img/project-1.jpg" alt="project-1" />
 							<span class="project__overlay--close">&times;</span>
-							<i id="left" class="fas fa-chevron-left"></i>
-							<i id=right class="fas fa-chevron-right"></i>	
 						</figure>
 						<h4 class="heading-4 project__overlay--header">Pictureich</h4>
 						<hr>
@@ -150,7 +146,7 @@
 				<div class="project__overlay">
 					<div class="project__overlay--container">
 						<figure class="project__overlay--figure">
-							<img class="project__overlay--image" src="/resources/img/project-5.jpg" alt="project-5" />
+							<img class="project__overlay--image" src="/resources/img/project-3.jpg" alt="project-3" />
 							<span class="project__overlay--close">&times;</span>	
 						</figure>
 						<h4 class="heading-4 project__overlay--header">Health Kitchen</h4>
@@ -170,7 +166,7 @@
 				<div class="project__overlay">
 					<div class="project__overlay--container">
 						<figure class="project__overlay--figure">
-							<img class="project__overlay--image" src="/resources/img/project-5.jpg" alt="project-5" />
+							<img class="project__overlay--image" src="/resources/img/project-4.jpg" alt="project-4" />
 							<span class="project__overlay--close">&times;</span>	
 						</figure>
 						<h4 class="heading-4 project__overlay--header">GPA Calculator</h4>
@@ -210,7 +206,7 @@
 				<div class="project__overlay">
 					<div class="project__overlay--container">
 						<figure class="project__overlay--figure">
-							<img class="project__overlay--image" src="/resources/img/project-5.jpg" alt="project-5" />
+							<img class="project__overlay--image" src="/resources/img/project-6.jpg" alt="project-6" />
 							<span class="project__overlay--close">&times;</span>	
 						</figure>
 						<h4 class="heading-4 project__overlay--header">Video Player</h4>
