--- a/public/stylesheets/css/style.css
+++ b/public/stylesheets/css/style.css
@@ -108,7 +108,7 @@ body {
   margin: 0;
   display: grid;
   grid-template-columns: repeat(2, minmax(10rem, 60rem));
-  grid-template-rows: repeat(2, max-content);
+  grid-template-rows: min-content max-content;
   grid-column-gap: 10rem;
   grid-row-gap: 18rem;
   justify-items: start;
@@ -151,30 +151,34 @@ body {
     color: #f9f7f6;
     font-size: 2.5rem; }
   .header__img {
-    width: 100%;
-    height: 100%; }
+    width: 50rem;
+    height: 50rem; }
 
 .about {
   grid-column: center-start / center-end;
   margin: 15rem 0;
   display: grid;
   grid-template-columns: repeat(2, minmax(10rem, 60rem));
-  grid-template-rows: repeat(2, max-content);
+  grid-template-rows: min-content max-content;
   grid-column-gap: 10rem;
+  grid-row-gap: 4rem;
   justify-items: center;
   align-items: center; }
+  .about__title {
+    grid-column: 1 / -1;
+    grid-row: 1 / span 1;
+    text-align: center; }
   .about img {
-    grid-row: 1 / -1;
-    width: 100%;
-    height: 100%; }
+    width: 42rem;
+    height: 53rem; }
   .about__paragraph {
     font-size: 2rem;
-    color: #10442f;
-    text-align: center; }
+    color: #10442f; }
 
 .services {
-  grid-column: center-start / center-end;
-  margin: 0 0 15rem 0;
+  grid-column: full-start / full-end;
+  padding: 15rem;
+  background-color: #f9f7f6;
   display: grid;
   grid-template-columns: repeat(3, minmax(25rem, max-content));
   grid-template-rows: repeat(3, min-content);
@@ -290,26 +294,16 @@ body {
     grid-row-gap: 2rem; }
   .project__overlay--figure {
     position: relative; }
-    .project__overlay--figure i {
-      font-size: 1.5rem;
-      border: 2px solid blue;
-      padding: 2rem;
-      position: absolute;
-      top: 50%; }
-    .project__overlay--figure i:last-child {
-      position: absolute;
-      right: 0rem; }
   .project__overlay--image {
-    width: 100%;
-    height: auto; }
+    width: 100%; }
   .project__overlay--close {
-    color: #ccc;
+    color: #f9f7f6;
     position: absolute;
     right: .9rem;
     top: .1rem;
     font-size: 30px; }
   .project__overlay--close:hover, .project__overlay--close:focus {
-    color: #000;
+    color: #10442f;
     text-decoration: none;
     cursor: pointer; }
   .project__overlay--para {
@@ -323,9 +317,13 @@ body {
 
 .contact {
   grid-column: full-start / full-end;
-  margin: 25rem 0;
+  margin-top: 20rem;
+  background-color: rgba(243, 240, 240, 0.863);
+  width: 100%;
+  padding: 25rem;
   display: grid;
-  grid-row-gap: 5rem; }
+  grid-row-gap: 5rem;
+  justify-content: center; }
   .contact ul {
     list-style: none;
     display: flex;
