--- a/public/stylesheets/sass/layout/_about.scss
+++ b/public/stylesheets/sass/layout/_about.scss
@@ -4,20 +4,25 @@
 
 	display: grid;
 	grid-template-columns: repeat(2, minmax(10rem, 60rem));
-	grid-template-rows: repeat(2, max-content);
+	grid-template-rows: min-content max-content;
 	grid-column-gap: 10rem;
+	grid-row-gap: 4rem;
 	justify-items: center;
 	align-items: center;
 
+	&__title {
+		grid-column: 1 / -1;
+		grid-row: 1 / span 1;
+		text-align: center;
+	}
+
 	img {
-		grid-row: 1 / -1;
-		width: 100%;
-		height: 100%;
+		width: 42rem;
+		height: 53rem;
 	}
 
 	&__paragraph {
 		font-size: 2rem;
 		color: $color-secondary;
-		text-align: center;
 	}
 }
