--- a/public/stylesheets/sass/layout/_header.scss
+++ b/public/stylesheets/sass/layout/_header.scss
@@ -7,7 +7,7 @@
 
 	display: grid;
 	grid-template-columns: repeat(2, minmax(10rem, 60rem));
-	grid-template-rows: repeat(2, max-content);
+	grid-template-rows: min-content max-content;
 	grid-column-gap: 10rem;
 	grid-row-gap: 18rem;
 	justify-items: start;
@@ -73,7 +73,7 @@
 	}
 
 	&__img {
-		width: 100%;
-		height: 100%;
+		width: 50rem;
+		height: 50rem;
 	}
 }
