changed project styling

--- a/public/stylesheets/sass/layout/_about.scss
+++ b/public/stylesheets/sass/layout/_about.scss
@@ -1,6 +1,6 @@
 .about {
 	grid-column: center-start / center-end;
-	margin: 15rem 0;
+	padding: 15rem 0 0;
 
 	display: grid;
 	grid-template-columns: repeat(2, minmax(10rem, 60rem));
