--- a/public/stylesheets/sass/main.scss
+++ b/public/stylesheets/sass/main.scss
@@ -6,6 +6,7 @@
 
 @import "layout/header";
 @import "layout/about";
+@import "layout/skills";
 @import "layout/services";
 @import "layout/projects";
 @import "layout/contact";
