--- a/public/stylesheets/css/style.css
+++ b/public/stylesheets/css/style.css
@@ -56,7 +56,7 @@ body {
 
 .heading-3 {
   font-size: 1.6rem;
-  color: #7108ad;
+  color: #0886ad;
   text-transform: uppercase; }
 
 .heading-4 {
@@ -67,7 +67,7 @@ body {
     color: rgba(92, 80, 67, 0.562); }
 
 .btn {
-  background-color: #7108ad;
+  background-color: #0886ad;
   color: #fff;
   border: none;
   border-radius: 200px;
@@ -78,14 +78,14 @@ body {
   cursor: pointer;
   transition: all .2s; }
   .btn:hover {
-    background-color: #600b75; }
+    background-color: #0b6575; }
 
 .btn-outline {
   background-color: transparent;
-  border: 1px solid #7108ad;
-  color: #7108ad; }
+  border: 1px solid #0886ad;
+  color: #0886ad; }
   .btn-outline:hover {
-    background-color: #600b75;
+    background-color: #0b6575;
     color: #fff; }
 
 .mb-sm {
@@ -136,7 +136,7 @@ body {
         text-transform: uppercase;
         transition: .2s; }
       .header nav ul:last-child a:hover, .header nav ul:last-child a:active {
-        border-bottom: 1.6px solid #7108ad; }
+        border-bottom: 1.6px solid #0886ad; }
       .header nav ul:last-child li:nth-child(1) {
         grid-column: 1 / span 1; }
       .header nav ul:last-child li:nth-child(2) {
@@ -156,7 +156,7 @@ body {
 
 .about {
   grid-column: center-start / center-end;
-  margin: 15rem 0;
+  padding: 15rem 0 0;
   display: grid;
   grid-template-columns: repeat(2, minmax(10rem, 60rem));
   grid-template-rows: min-content max-content;
@@ -175,10 +175,60 @@ body {
     font-size: 2rem;
     color: #10442f; }
 
+.skills {
+  grid-column: full-start / full-end;
+  padding: 10rem 0;
+  background-color: #f9f7f6;
+  width: 100%;
+  display: grid;
+  grid-template-columns: 60vw;
+  justify-content: center;
+  justify-items: center;
+  align-items: center; }
+  .skills__list {
+    list-style: none;
+    color: red;
+    width: 100%; }
+    .skills__list li {
+      margin: 3rem 0; }
+    .skills__list--bar {
+      background-color: rgba(243, 240, 240, 0.863);
+      height: 2.8rem;
+      border: 1px solid #f9f7f6;
+      display: block; }
+      .skills__list--bar span {
+        background-color: #0886ad;
+        float: left;
+        height: 100%; }
+      .skills__list--bar .count {
+        display: flex;
+        align-items: center;
+        justify-content: flex-end;
+        font-weight: 100;
+        word-spacing: 1rem;
+        padding-right: 1rem;
+        font-size: 1.6rem;
+        color: rgba(92, 80, 67, 0.562); }
+      .skills__list--bar .html {
+        width: 90%; }
+      .skills__list--bar .css {
+        width: 85%; }
+      .skills__list--bar .sass {
+        width: 75%; }
+      .skills__list--bar .javascript {
+        width: 70%; }
+      .skills__list--bar .react {
+        width: 65%; }
+      .skills__list--bar .node {
+        width: 60%; }
+      .skills__list--bar .express {
+        width: 60%; }
+      .skills__list--bar .mongodb {
+        width: 50%; }
+
 .services {
   grid-column: full-start / full-end;
   padding: 15rem;
-  background-color: #f9f7f6;
   display: grid;
   grid-template-columns: repeat(3, minmax(25rem, max-content));
   grid-template-rows: repeat(3, min-content);
@@ -208,7 +258,7 @@ body {
   transition: all .2s; }
   .service i {
     font-size: 5rem;
-    color: #7108ad; }
+    color: #0886ad; }
   .service__paragraph {
     font-size: 1.7rem; }
 
@@ -217,6 +267,9 @@ body {
 
 .projects {
   grid-column: full-start / full-end;
+  padding-bottom: 20rem;
+  background-color: #f9f7f6;
+  width: 100%;
   display: grid;
   grid-template-columns: repeat(3, 35rem);
   grid-template-rows: repeat(3, 35rem);
@@ -236,8 +289,10 @@ body {
     grid-column: 3 / span 1; }
 
 .project__shape {
+  padding: 2rem;
   position: relative;
-  overflow: hidden; }
+  overflow: hidden;
+  box-shadow: 0px 0px 6px 1px rgba(165, 165, 165, 0.75); }
 
 .project__image {
   width: 100%;
@@ -317,8 +372,6 @@ body {
 
 .contact {
   grid-column: full-start / full-end;
-  margin-top: 20rem;
-  background-color: rgba(243, 240, 240, 0.863);
   width: 100%;
   padding: 25rem;
   display: grid;
