--- a/views/index.ejs
+++ b/views/index.ejs
@@ -10,21 +10,25 @@
 		<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
         <link href="https://fonts.googleapis.com/css?family=Josefin+Sans:300,400,400i|Nunito:300,300i" rel="stylesheet">
         <link rel="stylesheet" href="/stylesheets/css/style.css">
-        
-        <title>Health_Kitchen &mdash; There is nothing like staying at your own home.</title>
+	
+		<!-- <script src="https://unpkg.com/scrollreveal@4.0.0/dist/scrollreveal.min.js"></script> -->
+		<!-- <script src="https://unpkg.com/scrollreveal"></script> -->
+		<script src="https://unpkg.com/scrollreveal/dist/scrollreveal.min.js"></script>
+		
+        <title>Rituraj Dutta - Full Stack Web Developer</title>
     </head>
     <body class="container">
 
 		<header class="header">
-			<nav>
+			<nav class="navbar">
 				<ul>
 					<li><i class="fas fa-tv"></i></li>
 				</ul>
 				<ul>
 					<li><a href="#about">About</a></li>
-					<li><a href="#procedure">Services</a></li>
-					<li><a href="#cities">Projects</a></li>
-					<li><a href="#">Contact</a></li>
+					<li><a href="#services">Services</a></li>
+					<li><a href="#projects">Projects</a></li>
+					<li><a href="#contact">Contact</a></li>
 				</ul>
 			</nav>
 			<h1 class="heading-1">Hi I am <br/> Rituraj Dutta<br/><br/><span>Full Stack Web Developer</span></h1>
@@ -39,7 +43,104 @@
 			</p>
 		</section>
 
-		<section class="services">
+		<section class="skills" id="skills">
+
+			<h2 class="heading-2 mb-hg">My Skills</h2>
+
+			<ul class="skills__list">
+				<li>
+					<h4 class="heading-4">HTML5</h4>
+					<span class="skills__list--bar">
+						<span class="html">
+
+						</span>
+						<em class="count">
+							90%
+						</em>
+					</span>
+				</li>
+				<li>
+					<h4 class="heading-4">CSS3</h4>
+					<span class="skills__list--bar">
+						<span class="css">
+
+						</span>
+						<em class="count">
+							85%
+						</em>
+					</span>
+				</li>
+				<li>
+					<h4 class="heading-4">SASS</h4>
+					<span class="skills__list--bar">
+						<span class="sass">
+
+						</span>
+						<em class="count">
+							75%
+						</em>
+					</span>
+				</li>
+				<li>
+					<h4 class="heading-4">Javascript</h4>
+					<span class="skills__list--bar">
+						<span class="javascript">
+
+						</span>
+						<em class="count">
+							70%
+						</em>
+					</span>
+				</li>
+				<li>
+					<h4 class="heading-4">ReactJs</h4>
+					<span class="skills__list--bar">
+						<span class="react">
+
+						</span>
+						<em class="count">
+							65%
+						</em>
+					</span>
+				</li>
+				<li>
+					<h4 class="heading-4">NodeJs</h4>
+					<span class="skills__list--bar">
+						<span class="node">
+
+						</span>
+						<em class="count">
+							60%
+						</em>
+					</span>
+				</li>
+				<li>
+					<h4 class="heading-4">Express</h4>
+					<span class="skills__list--bar">
+						<span class="express">
+
+						</span>
+						<em class="count">
+							60%
+						</em>
+					</span>
+				</li>
+				<li>
+					<h4 class="heading-4">MongoDB</h4>
+					<span class="skills__list--bar">
+						<span class="mongodb">
+
+						</span>
+						<em class="count">
+							50%
+						</em>
+					</span>
+				</li>
+			</ul>
+			
+		</section>
+
+		<section class="services" id="services">
 			<h2 class="heading-2 services__title">My Services</h2>
 
 			<div class="service">
@@ -92,7 +193,7 @@
 
 		</section>
 
-		<section class="projects">
+		<section class="projects" id="projects">
 
 			<h2 class="heading-2 projects__title">Projects</h2>
 	
@@ -218,7 +319,7 @@
 
 		</section>
 
-		<section class="contact">
+		<section class="contact" id="contact">
 			<h2 class="heading-2">Contact</h2>
 			<ul>
 				<li><a href="https://www.instagram.com/rituraj265/" target="_blank"><i class="fab fa-instagram"></i></a></li>
@@ -261,7 +362,18 @@
 			<p>&copy; Copyright 2019 by Rituraj Dutta</p>
 		</footer>
 
+		<script
+			src="https://code.jquery.com/jquery-3.4.1.js"
+			integrity="sha256-WpOohJOqMqqyKL9FccASB9O0KwACQJpFTUBLTYOVvVU="
+			crossorigin="anonymous"
+		>
+		</script>
+		<script>
+			ScrollReveal().reveal('navbar', {duration: 2000, origin: 'buttom'})
+		</script> -->
+		
 
+		<script src="/js/animation.js"></script>
 		<script src="/js/index.js"></script>
     </body>
 </html>
