--- a/public/stylesheets/sass/layout/_about.scss
+++ b/public/stylesheets/sass/layout/_about.scss
@@ -1,20 +1,14 @@
 .about {
 	grid-column: center-start / center-end;
-	padding: 15rem 0 0;
+	padding: 15rem 10rem 15rem 0;
 
 	display: grid;
-	grid-template-columns: repeat(2, minmax(10rem, 60rem));
-	grid-template-rows: min-content max-content;
-	grid-column-gap: 10rem;
+	grid-template-columns: 30vw 50vw;
+	grid-template-rows: repeat(3, min-content);
+	grid-column-gap: 5rem;
 	grid-row-gap: 4rem;
 	justify-items: center;
 	align-items: center;
-
-	&__title {
-		grid-column: 1 / -1;
-		grid-row: 1 / span 1;
-		text-align: center;
-	}
 
 	img {
 		width: 42rem;
