--- a/public/stylesheets/sass/base/_typography.scss
+++ b/public/stylesheets/sass/base/_typography.scss
@@ -68,3 +68,28 @@
 		color: #fff;
     }
 }
+
+.underline {
+	line-height: .3rem;
+	background-color: #e67e22;
+	width: 7rem;
+	grid-column: 1 / -1;
+	grid-row: 2 / span 1;
+}
+
+.title {
+	grid-column: 1 / -1;
+	grid-row: 1 / span 1;
+	align-self: center;
+	text-align: center;
+}
+
+// .heading-2:after {
+//     display: block;
+//     height: 2px;
+//     background-color: #e67e22;
+//     content: " ";
+//     width: 100px;
+//     margin: 0 auto;
+//     margin-top: 30px;
+// }
