--- a/public/stylesheets/sass/layout/_projects.scss
+++ b/public/stylesheets/sass/layout/_projects.scss
@@ -1,19 +1,15 @@
 .projects {
 	grid-column: full-start / full-end;
-	padding-bottom: 20rem;
+	padding: 20rem 0;
 	background-color: $color-grey-light-1;
 	width: 100%;
 
 	display: grid;
 	grid-template-columns: repeat(3, 35rem);
-	grid-template-rows: repeat(3, 35rem);
+	grid-template-rows: repeat(2, min-content) repeat(2, 35rem);
+	grid-gap: 6rem;
 	justify-content: center;
 	justify-items: center;
-
-	&__title {
-		grid-column: 1 / -1;
-		align-self: center;
-	}
 
 	&__para {
 		grid-column: 1 / span 4;
@@ -96,6 +92,20 @@
 		width: 100%;
 		overflow: auto;
 		background-color: rgba(0, 0, 0, 0.5);
+
+		i {
+			font-size: 3rem;
+			font-weight: 100;
+			border: 1px solid $color-grey-light-1;
+			position: absolute;
+			top: 50%;
+		}
+		i:first-child {
+			left: 1rem;
+		}
+		i:last-child {
+			right: 1rem;
+		}
 
 		&--container {
 			margin: 5% auto;
