--- a/public/stylesheets/sass/layout/_skills.scss
+++ b/public/stylesheets/sass/layout/_skills.scss
@@ -5,17 +5,28 @@
 	width: 100%;
 	
 	display: grid;
-	grid-template-columns: 60vw;
+	grid-template-columns: repeat(2, 40vw);
+	grid-template-rows: repeat(2, min-content) max-content;
+	grid-gap: 5rem;
 	justify-content: center;
 	justify-items: center;
-	align-items: center;
+	// align-items: center;
+
+	.list-1 {
+		grid-row: 3 / span 1;
+		grid-column: 1 / span 1;
+	}
+	.list-2 {
+		grid-row: 3 / span 1;
+		grid-column: 2 / span 1;
+	}
 
 	&__list {
 		list-style: none;
 		color: red;
 		width: 100%;
 
-		li {
+		&--li {
 			margin: 3rem 0;
 		}
 		
@@ -74,6 +85,5 @@
 			}
 		}
 	}
-
 
 }
