--- a/views/index.ejs
+++ b/views/index.ejs
@@ -216,8 +216,8 @@
 						<figure class="project__overlay--figure">
 							<img class="project__overlay--image" src="/resources/img/project-1.jpg" alt="project-1" />
 							<span class="project__overlay--close">&times;</span>
-							<i class="fas fa-chevron-left" id="left"></i>
-							<i class="fas fa-chevron-right" id="right"></i>
+							<!-- <i class="fas fa-chevron-left" id="left"></i>
+							<i class="fas fa-chevron-right" id="right"></i> -->
 						</figure>
 						<h4 class="heading-4 project__overlay--header">Pictureich</h4>
 						<hr>
@@ -238,8 +238,8 @@
 						<figure class="project__overlay--figure">
 							<img class="project__overlay--image" src="/resources/img/project-2.jpg" alt="project-5" />
 							<span class="project__overlay--close">&times;</span>
-							<i class="fas fa-chevron-left" id="left"></i>
-							<i class="fas fa-chevron-right" id="right"></i>
+							<!-- <i class="fas fa-chevron-left" id="left"></i>
+							<i class="fas fa-chevron-right" id="right"></i> -->
 						</figure>
 						<h4 class="heading-4 project__overlay--header">Homejone</h4>
 						<hr>
@@ -260,8 +260,8 @@
 						<figure class="project__overlay--figure">
 							<img class="project__overlay--image" src="/resources/img/project-3.jpg" alt="project-3" />
 							<span class="project__overlay--close">&times;</span>
-							<i class="fas fa-chevron-left" id="left"></i>
-							<i class="fas fa-chevron-right" id="right"></i>
+							<!-- <i class="fas fa-chevron-left" id="left"></i>
+							<i class="fas fa-chevron-right" id="right"></i> -->
 						</figure>
 						<h4 class="heading-4 project__overlay--header">Health Kitchen</h4>
 						<hr>
@@ -282,8 +282,8 @@
 						<figure class="project__overlay--figure">
 							<img class="project__overlay--image" src="/resources/img/project-4.jpg" alt="project-4" />
 							<span class="project__overlay--close">&times;</span>
-							<i class="fas fa-chevron-left" id="left"></i>
-							<i class="fas fa-chevron-right" id="right"></i>
+							<!-- <i class="fas fa-chevron-left" id="left"></i>
+							<i class="fas fa-chevron-right" id="right"></i> -->
 						</figure>
 						<h4 class="heading-4 project__overlay--header">GPA Calculator</h4>
 						<hr>
@@ -304,8 +304,8 @@
 						<figure class="project__overlay--figure">
 							<img class="project__overlay--image" src="/resources/img/project-5.jpg" alt="project-5" />
 							<span class="project__overlay--close">&times;</span>
-							<i class="fas fa-chevron-left" id="left"></i>
-							<i class="fas fa-chevron-right" id="right"></i>	
+							<!-- <i class="fas fa-chevron-left" id="left"></i>
+							<i class="fas fa-chevron-right" id="right"></i>	 -->
 						</figure>
 						<h4 class="heading-4 project__overlay--header">Freddie Mercury Tribute Page</h4>
 						<hr>
@@ -326,8 +326,8 @@
 						<figure class="project__overlay--figure">
 							<img class="project__overlay--image" src="/resources/img/project-6.jpg" alt="project-6" />
 							<span class="project__overlay--close">&times;</span>
-							<i class="fas fa-chevron-left" id="left"></i>
-							<i class="fas fa-chevron-right" id="right"></i>
+							<!-- <i class="fas fa-chevron-left" id="left"></i>
+							<i class="fas fa-chevron-right" id="right"></i> -->
 						</figure>
 						<h4 class="heading-4 project__overlay--header">Video Player</h4>
 						<hr>
