--- a/public/stylesheets/sass/layout/_skills.scss
+++ b/public/stylesheets/sass/layout/_skills.scss
@@ -40,6 +40,7 @@
 				background-color: $color-primary;
 				float: left;
 				height: 100%;	
+				// animation: Skill 3s linear 1s forwards;
 			}
 			.count {
 				display: flex;
