--- a/views/index.ejs
+++ b/views/index.ejs
@@ -36,7 +36,7 @@
 		</header>
 
 		<section class="about" id="about">
-			<img src="/resources/img/about.png" alt="about_photo" />
+			<img class="about__image" src="/resources/img/about.png" alt="about_photo" />
 			<h2 class="heading-2 title">About Me</h2>
 			<div class="underline">&mdash;</div>
 			<p class="about__paragraph">
@@ -341,7 +341,7 @@
 		<section class="contact" id="contact">
 			<h2 class="heading-2 title">Contact</h2>
 			<div class="underline">&mdash;</div>
-			<ul>
+			<ul class="contact__list">
 				<li><a href="https://www.instagram.com/rituraj265/" target="_blank"><i class="fab fa-instagram"></i></a></li>
 				<li><a href="https://twitter.com/rituraj265" target="_blank"><i class="fab fa-twitter"></i></a></li>
 				<li><a href="https://www.linkedin.com/in/rituraj-dutta-7619a2181/" target="_blank"><i class="fab fa-linkedin"></i></a></li>
