--- a/public/stylesheets/sass/layout/_contact.scss
+++ b/public/stylesheets/sass/layout/_contact.scss
@@ -8,7 +8,7 @@
 	justify-content: center;
 	justify-items: center;
 
-	ul {
+	&__list {
 		list-style: none;
 		display: grid;
 		grid-template-columns: repeat(4, min-content);
