added all the animations

--- a/public/stylesheets/css/style.css
+++ b/public/stylesheets/css/style.css
@@ -1,3 +1,89 @@
+@keyframes htmlProg {
+  0% {
+    width: 0; }
+  25% {
+    width: 25%; }
+  50% {
+    width: 50%; }
+  75% {
+    width: 75%; }
+  100% {
+    width: 90%; } }
+
+@keyframes cssProg {
+  0% {
+    width: 0; }
+  25% {
+    width: 25%; }
+  50% {
+    width: 50%; }
+  75% {
+    width: 75%; }
+  100% {
+    width: 85%; } }
+
+@keyframes sassProg {
+  0% {
+    width: 0; }
+  25% {
+    width: 25%; }
+  50% {
+    width: 50%; }
+  75% {
+    width: 75%; }
+  100% {
+    width: 75%; } }
+
+@keyframes jsProg {
+  0% {
+    width: 0; }
+  25% {
+    width: 25%; }
+  50% {
+    width: 50%; }
+  100% {
+    width: 65%; } }
+
+@keyframes reactProg {
+  0% {
+    width: 0; }
+  25% {
+    width: 25%; }
+  50% {
+    width: 50%; }
+  100% {
+    width: 65%; } }
+
+@keyframes nodeProg {
+  0% {
+    width: 0; }
+  25% {
+    width: 25%; }
+  50% {
+    width: 50%; }
+  100% {
+    width: 60%; } }
+
+@keyframes expressProg {
+  0% {
+    width: 0; }
+  25% {
+    width: 25%; }
+  50% {
+    width: 50%; }
+  100% {
+    width: 60%; } }
+
+@keyframes mongodbProg {
+  0% {
+    width: 0; }
+  25% {
+    width: 25%; }
+  50% {
+    width: 50%; }
+  100% {
+    width: 50%; } }
+
 *,
 *::after,
 *::before {
@@ -147,9 +233,9 @@ body {
         color: #10442f;
         font-size: 1.5rem;
         text-transform: uppercase;
-        transition: .2s; }
+        transition: .1s; }
       .header .navbar ul:last-child a:hover, .header .navbar ul:last-child a:active {
-        border-bottom: 1.6px solid #0886ad; }
+        border-bottom: 0.1rem solid #0886ad; }
       .header .navbar ul:last-child li:nth-child(1) {
         grid-column: 1 / span 1; }
       .header .navbar ul:last-child li:nth-child(2) {
@@ -215,7 +301,8 @@ body {
       .skills__list--bar span {
         background-color: #0886ad;
         float: left;
-        height: 100%; }
+        height: 100%;
+        transition: 2s; }
       .skills__list--bar .count {
         display: flex;
         align-items: center;
@@ -226,21 +313,21 @@ body {
         font-size: 1.6rem;
         color: rgba(92, 80, 67, 0.562); }
       .skills__list--bar .html {
-        width: 90%; }
+        width: 0%; }
       .skills__list--bar .css {
-        width: 85%; }
+        width: 0%; }
       .skills__list--bar .sass {
-        width: 75%; }
+        width: 0%; }
       .skills__list--bar .javascript {
-        width: 70%; }
+        width: 0%; }
       .skills__list--bar .react {
-        width: 65%; }
+        width: 0%; }
       .skills__list--bar .node {
-        width: 60%; }
+        width: 0%; }
       .skills__list--bar .express {
-        width: 60%; }
+        width: 0%; }
       .skills__list--bar .mongodb {
-        width: 50%; }
+        width: 0%; }
 
 .services {
   grid-column: full-start / full-end;
