--- a/public/stylesheets/sass/base/_animations.scss
+++ b/public/stylesheets/sass/base/_animations.scss
@@ -1,7 +1,60 @@
-// @keyframes Skill {
-// 	0% {width: 0;}
-// 	25% {width: 25%;}
-// 	50% {width: 50%;}
-// 	75% {width: 75%;}
-// 	100% {width: 100%;}
-// }
+// Section animations
+
+@keyframes htmlProg {
+	0% {width: 0;}
+	25% {width: 25%;}
+	50% {width: 50%;}
+	75% {width: 75%;}
+	100% {width: 90%;}
+}
+@keyframes cssProg {
+	0% {width: 0;}
+	25% {width: 25%;}
+	50% {width: 50%;}
+	75% {width: 75%;}
+	100% {width: 85%;}
+}
+@keyframes sassProg {
+	0% {width: 0;}
+	25% {width: 25%;}
+	50% {width: 50%;}
+	75% {width: 75%;}
+	100% {width: 75%;}
+}
+@keyframes jsProg {
+	0% {width: 0;}
+	25% {width: 25%;}
+	50% {width: 50%;}
+	// 75% {width: 75%;}
+	100% {width: 65%;}
+}
+@keyframes reactProg {
+	0% {width: 0;}
+	25% {width: 25%;}
+	50% {width: 50%;}
+	// 75% {width: 75%;}
+	100% {width: 65%;}
+}
+@keyframes nodeProg {
+	0% {width: 0;}
+	25% {width: 25%;}
+	50% {width: 50%;}
+	// 75% {width: 75%;}
+	100% {width: 60%;}
+}
+@keyframes expressProg {
+	0% {width: 0;}
+	25% {width: 25%;}
+	50% {width: 50%;}
+	// 75% {width: 75%;}
+	100% {width: 60%;}
+}
+@keyframes mongodbProg {
+	0% {width: 0;}
+	25% {width: 25%;}
+	50% {width: 50%;}
+	// 75% {width: 75%;}
+	100% {width: 50%;}
+}
+
+
