--- a/public/stylesheets/sass/layout/_header.scss
+++ b/public/stylesheets/sass/layout/_header.scss
@@ -1,16 +1,19 @@
 .header {
 	grid-column: full-start / full-end;
-	padding: 0 10rem;
+	// padding: 0 10rem;
 	background-image: url(../../resources/img/background.jpg);
 	background-size: cover;
+	width: 100%;
+	height: 100%;
 	margin: 0;
 
 	display: grid;
-	grid-template-columns: repeat(2, minmax(10rem, 60rem));
+	grid-template-columns: repeat(2, 40vw);
 	grid-template-rows: min-content max-content;
-	grid-column-gap: 10rem;
+	// grid-column-gap: 10rem;
 	grid-row-gap: 18rem;
-	justify-items: start;
+	justify-content: center;
+	justify-items: center;
 	align-items: center;
 	
 
@@ -73,7 +76,7 @@
 	}
 
 	&__img {
-		width: 50rem;
-		height: 50rem;
+		width: 20vw;
+		height: 20vw;
 	}
 }
